kubernetes/deploy/proxies/external/jellyfin/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: jellyfin
spec:
  ports:
  - protocol: TCP
    port: 8096
    name: http
    targetPort: 8096
