kubernetes/deploy/proxies/external/jellyfin/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik-external
  name: jellyfin
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`jellyfin.vandeneede.org`)
    services:
    - name: jellyfin
      port: 8096
